dev: added layout module

--- a/front/index.html
+++ b/front/index.html
@@ -7,9 +7,12 @@
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/angular/angular.js"></script>
     <script src="main.js"></script>
+    <script src="layout.js"></script>
     <title>Gestion Stock</title>
   </head>
   <body ng-app="myApp">
-    <hello></hello>
+    <layout-header></layout-header>
+    <layout-body></layout-body>
+    <layout-footer></layout-foote>
   </body>
 </html>
