dev: added var example

--- a/front/index.html
+++ b/front/index.html
@@ -13,6 +13,6 @@
   <body ng-app="myApp">
     <layout-header></layout-header>
     <layout-body></layout-body>
-    <layout-footer></layout-foote>
+    <layout-footer></layout-footer>
   </body>
 </html>
