dev: added templateUrl

--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,7 @@
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/angular/angular.js"></script>
     <script src="main.js"></script>
-    <script src="layout.js"></script>
+    <script src="layout/layout.js"></script>
     <title>Gestion Stock</title>
   </head>
   <body ng-app="myApp">
