dev: added css and image

--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,7 @@
     <script src="./node_modules/angular/angular.js"></script>
     <script src="main.js"></script>
     <script src="layout/layout.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Gestion Stock</title>
   </head>
   <body ng-app="myApp">
