--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/angular/angular.js"></script>
-    <script src="main.js"></script>
-    <script src="layout/layout.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/angular/angular.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Gestion Stock</title>
   </head>
