--- a/front/src/index.html
+++ b/front/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestion Stock</title>
+    <link rel="shortcut icon" href="assets/logo.svg" type="image/svg+xml" />
   </head>
   <body ng-app="myApp">
     <layout-header></layout-header>
