dev: added app component

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -8,8 +8,6 @@
     <link rel="shortcut icon" href="assets/logo.svg" type="image/svg+xml" />
   </head>
   <body ng-app="myApp">
-    <layout-header></layout-header>
-    <layout-body></layout-body>
-    <layout-footer></layout-footer>
+    <app></app>
   </body>
 </html>
