dev: added templates content

--- a/front/src/routes/home.html
+++ b/front/src/routes/home.html
@@ -1,2 +1,4 @@
-<p>Home works!</p>
-<a href="/stock">Voir le stock</a>
+<main>
+  <h1>Gérer efficacement votre stock</h1>
+  <a href="/stock" class="button primary">Voir le stock</a>
+</main>
