--- a/front/src/routes/legal.html
+++ b/front/src/routes/legal.html
@@ -1,1 +1,30 @@
-<p>Legal works!</p>
+<main>
+  <h1>Mentions Légales</h1>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde minus quo
+    recusandae cum eveniet hic explicabo, dolores asperiores, sit et
+    reprehenderit rem, ipsa non rerum? Repellat suscipit hic magnam officiis.
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nemo saepe
+    eveniet fugiat, explicabo consectetur dolore sequi sunt soluta dolorem
+    similique odio quasi rerum voluptates, quos molestiae dolores inventore
+    error. Labore inventore asperiores reprehenderit delectus aliquid voluptatem
+    dolore consequuntur incidunt perspiciatis mollitia odit, soluta quas
+    quisquam numquam nemo voluptatum beatae.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic praesentium
+    omnis ipsa nisi harum itaque vitae libero, sapiente accusamus, a saepe
+    officiis sit illum nesciunt. Odio saepe animi deserunt deleniti tenetur
+    consequuntur aliquid eos veritatis nesciunt blanditiis molestias placeat et,
+    sit consequatur corporis. Officia illum beatae aut, omnis sunt quia
+    provident sequi iure ratione praesentium veniam itaque deserunt iusto
+    exercitationem labore corporis doloremque libero. Voluptatum amet in ratione
+    error soluta expedita nihil natus reprehenderit rerum! Minima veniam id
+    excepturi officia sit, nam ipsa vel aliquid temporibus animi, consequatur
+    mollitia rerum quis laboriosam neque quibusdam saepe, nostrum qui obcaecati.
+    Temporibus, excepturi?
+  </p>
+</main>
