--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -1,1 +1,18 @@
-<p>Add works!</p>
+<main>
+  <h1>Ajout d'article</h1>
+  <form>
+    <label>
+      <span>Nom</span>
+      <input type="text" />
+    </label>
+    <label>
+      <span>Prix</span>
+      <input type="text" />
+    </label>
+    <label>
+      <span>Quantité</span>
+      <input type="text" />
+    </label>
+    <button>Ajouter</button>
+  </form>
+</main>
