--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -1,2 +1,41 @@
-<p>Stock works!</p>
-<a href="/stock/add">Ajouter un article</a>
+<main>
+  <h1>Liste des articles</h1>
+  <div class="content">
+    <nav>
+      <button>Rafraîchir</button>
+      <a href="/stock/add">Ajouter</a>
+      <button>Supprimer</button>
+    </nav>
+    <table>
+      <thead>
+        <tr>
+          <th class="name">Nom</th>
+          <th class="price">Prix</th>
+          <th class="qty">Quantité</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="name">Tournevis</td>
+          <td class="price">1.23 €</td>
+          <td class="qty">100</td>
+        </tr>
+        <tr>
+          <td class="name">Pelle</td>
+          <td class="price">2.30 €</td>
+          <td class="qty">40</td>
+        </tr>
+        <tr>
+          <td class="name">Marteau</td>
+          <td class="price">3.45 €</td>
+          <td class="qty">2000</td>
+        </tr>
+        <tr>
+          <td class="name">Scie</td>
+          <td class="price">12.34 €</td>
+          <td class="qty">56</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</main>
