dev: added css for legal and home

--- a/front/src/routes/home.html
+++ b/front/src/routes/home.html
@@ -1,4 +1,4 @@
-<main>
+<main class="home">
   <h1>Gérer efficacement votre stock</h1>
   <a href="/stock" class="button primary">Voir le stock</a>
 </main>
