--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -13,6 +13,6 @@
       <span>Quantité</span>
       <input type="text" />
     </label>
-    <button>Ajouter</button>
+    <button class="primary">Ajouter</button>
   </form>
 </main>
