--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -3,7 +3,7 @@
   <div class="content">
     <nav>
       <button>Rafraîchir</button>
-      <a href="/stock/add">Ajouter</a>
+      <a href="/stock/add" class="button">Ajouter</a>
       <button>Supprimer</button>
     </nav>
     <table>
