dev: added fontawesome

--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -2,7 +2,9 @@
   <h1>Liste des articles</h1>
   <div class="content">
     <nav>
-      <button>Rafraîchir</button>
+      <button title="Rafraîchir">
+        <i class="fa-solid fa-rotate-right"></i>
+      </button>
       <a href="/stock/add" class="button">Ajouter</a>
       <button>Supprimer</button>
     </nav>
