--- a/front/src/index.html
+++ b/front/src/index.html
@@ -8,6 +8,14 @@
     <title>Gestion Stock</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.3/angular-route.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/solid.min.css"
+    />
     <link rel="shortcut icon" href="assets/logo.svg" type="image/svg+xml" />
   </head>
   <body ng-app="myApp">
