dev: added icons

--- a/front/src/routes/home.html
+++ b/front/src/routes/home.html
@@ -1,4 +1,7 @@
 <main class="home">
   <h1>Gérer efficacement votre stock</h1>
-  <a href="/stock" class="button primary">Voir le stock</a>
+  <a href="/stock" class="button primary">
+    <span>Voir le stock</span>
+    <i class="fa-solid fa-angle-right"></i>
+  </a>
 </main>
