--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -13,6 +13,9 @@
       <span>Quantité</span>
       <input type="text" />
     </label>
-    <button class="primary">Ajouter</button>
+    <button class="primary">
+      <i class="fa-solid fa-plus"></i>
+      <span>Ajouter</span>
+    </button>
   </form>
 </main>
