--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -5,8 +5,12 @@
       <button title="Rafraîchir">
         <i class="fa-solid fa-rotate-right"></i>
       </button>
-      <a href="/stock/add" class="button">Ajouter</a>
-      <button>Supprimer</button>
+      <a href="/stock/add" class="button" title="Ajouter">
+        <i class="fa-solid fa-plus"></i>
+      </a>
+      <button title="Supprimer">
+        <i class="fa-solid fa-trash-can"></i>
+      </button>
     </nav>
     <table>
       <thead>
