--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -3,7 +3,7 @@
   <form>
     <label>
       <span>Nom</span>
-      <input type="text" />
+      <input type="text" ng-model="name" />
     </label>
     <label>
       <span>Prix</span>
@@ -18,4 +18,5 @@
       <span>Ajouter</span>
     </button>
   </form>
+  {{ name }}
 </main>
