--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -1,6 +1,6 @@
 <main>
   <h1>Ajout d'article</h1>
-  <form>
+  <form ng-submit="submit()">
     <label>
       <span>Nom</span>
       <input type="text" ng-model="name" />
