--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -8,7 +8,11 @@
       <a href="/stock/add" class="button" title="Ajouter">
         <i class="fa-solid fa-plus"></i>
       </a>
-      <button title="Supprimer">
+      <button
+        title="Supprimer"
+        ng-show="selectedArticles.size > 0"
+        ng-click="remove()"
+      >
         <i class="fa-solid fa-trash-can"></i>
       </button>
     </nav>
