--- a/front/src/routes/stock.html
+++ b/front/src/routes/stock.html
@@ -2,7 +2,7 @@
   <h1>Liste des articles</h1>
   <div class="content">
     <nav>
-      <button title="Rafraîchir">
+      <button title="Rafraîchir" ng-click="refresh()">
         <i class="fa-solid fa-rotate-right"></i>
       </button>
       <a href="/stock/add" class="button" title="Ajouter">
