dev: added test 2e2

--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -7,7 +7,7 @@
     </label>
     <label>
       <span>Prix</span>
-      <input type="number" ng-model="price" />
+      <input type="number" ng-model="price" step="0.01" />
     </label>
     <label>
       <span>Quantité</span>
