--- a/front/src/routes/stock-add.html
+++ b/front/src/routes/stock-add.html
@@ -3,15 +3,15 @@
   <form ng-submit="submit()">
     <label>
       <span>Nom</span>
-      <input type="text" ng-model="name" />
+      <input type="text" ng-model="name" required />
     </label>
     <label>
       <span>Prix</span>
-      <input type="number" ng-model="price" step="0.01" />
+      <input type="number" ng-model="price" step="0.01" required />
     </label>
     <label>
       <span>Quantité</span>
-      <input type="number" ng-model="qty" />
+      <input type="number" ng-model="qty" required />
     </label>
     <button class="primary" ng-disabled="isAdding">
       <i class="fa-solid fa-plus" ng-show="!isAdding"></i>
